
<resources>
    <string name="app_name">ExpenceTrackerApp</string>
    <string name="category_name">Category Name</string>
    <string name="currency_format">₹%.2f</string>
    <string name="user_name">John Doe</string>
    <string name="total_expense">Total Expense</string>
    <string name="user_icon">User Icon</string>
    <string name="expense_title_placeholder">Expense Title Placeholder</string>
    <string name="back">Back</string>
    <string name="filter">Filter</string>
    <string name="back_icon"> Back</string>
    <string name="category_icon">Category icon</string>
    <string name="bank_logo">Bank Logo</string>
    <string name="back_button_description">Back to previous screen</string>
    <string name="bank_logo_desc">Bank Logo</string>
    <string name="category_icon_desc">Category Icon</string>
    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string name="otp_verification">OTP Verification</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_the_mobile_number">Enter your Mobile Number</string>
    <string name="login_otp_app">Automated Expense Tracker</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_the_otp_sent_to">Enter the OTP Sent to</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="didn_t_recevice_the_otp">Didn\'t recevice the OTP</string>
    <string name="verify">VERIFY</string>
    <string name="_91">+ 91</string>
    <string name="welcome_to_dashboard">Welcome to Dashboard</string>
    <string name="total_amount_0_00">Total Amount: $0.00</string>
    <string name="all_expenses">All Expenses</string>
    <string name="todo">TODO</string>
    <string name="travel">Travel</string>
    <string name="micsc">Micsc</string>
    <string name="food">Food</string>
    <string name="grocery">Grocery</string>
    <string name="shopping">Shopping</string>
    <string name="billing">Billing</string>
    <string name="education">Education</string>

    <string-array name="years_array">
        <item>2026</item>
        <item>2025</item>
        <item>2024</item>
        <item>2023</item>
    </string-array>

</resources>

