<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <!-- Header with Back Icon, Title, Month and Year Filter -->
    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Header Layout -->
        <LinearLayout
            android:id="@+id/backAll"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#3649AB"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Back Icon -->
            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/back_icon"
                android:src="@drawable/baseline_arrow_back_24" />

            <!-- Title -->
            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/all_expenses"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Month and Year Filter Layout -->
        <LinearLayout
            android:id="@+id/backitem"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#3649AB"
            android:gravity="end"
            android:orientation="horizontal">

            <!-- Month Filter Spinner -->
            <Spinner
                android:id="@+id/month_filter"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/months_array"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <!-- Year Filter Spinner -->
            <Spinner
                android:id="@+id/year_filter"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginEnd="16dp"
                android:entries="@array/years_array"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Total Amount -->
        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="@string/total_amount_0_00"
            android:textColor="#F78B011D"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- RecyclerView to display the list of expenses -->
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="#6D6A6A"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        tools:layout_editor_absoluteX="0dp" />

    <!-- NestedScrollView to handle scrolling for header and list -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- RecyclerView to display the list of expenses -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewExpenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />

            <!-- If no content in RecyclerView -->
            <TextView
                android:id="@+id/itemContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="No Item Contents"
                android:gravity="center"
                android:textColor="@color/black"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Floating Action Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskFABtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_add_circle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:iconSize="25dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>